Fixes overflow of dynamic todo content by setting height: auto on body element.. adds absolute footer positioning, since overlap of dynamic content and footer no longer an issue.

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -14,6 +14,8 @@ body {
  min-height:100vh;
 }
 body {
+  height: auto;
+  position: relative;
   background-color: #DDDDDD;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
@@ -58,7 +60,10 @@ body {
   margin-top: 50px; }
 
 .todos {
-  margin-top: 15px; }
+  margin-top: 15px;
+  overflow: auto;
+  height: auto;
+}
 
 nav.navbar.navbar-default.navbar-fixed-top, .fixed-nav {
   background-color: #FFFFFF;
@@ -69,7 +74,9 @@ nav.navbar.navbar-default.navbar-fixed-top, .fixed-nav {
 
 main {
   display: inline-block;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
+
   max-width: 500px;
   padding: 15px;
 }
@@ -95,13 +102,11 @@ h1 {
   word-wrap: break-word; }
 
 footer {
-  // position: absolute;
-  // bottom: 0;
-  height: $footerHeight;
+  position: absolute;
+  bottom: 0;
+  min-height: $footerHeight;
   width: 100%;
   background-color: rgb(240,240,240);
-
-
 }
 
 .footer-content {
